# openshow_cli

./: .gitignore  README.md  obsidian_cli.py  package.json  pyproject.toml
database/: algorithms.md  data-structures.md  index.md  live-update-long-note.md  python-basics.md
database/concepts/: complexity.md  testing.md
database/demo_project/: design.md  graph-center.md  implementation.md  planning.md
database/demo_project/downstream/: api-contracts.md  api-layer.md  cache-design.md  error-responses.md  file-format.md  graph-layout.md  storage-layer.md  theme-controls.md  ui-layer.md
database/demo_project/upstream/: customer-feedback.md  navigation-study.md  refactor-plan.md  roadmap-notes.md  test-strategy.md  wireframe-review.md
database/patterns/: cli-design.md  error-handling.md  refactoring.md
database/projects/: notes-indexer.md  todo-app.md
demo/: .gitignore  index.md
demo/code/: example.py
demo/notebooks/: tiny-analysis.ipynb
demo/notes/: links.md  overview.md
demo/text/: sample.txt
docs/: code-block-preview.html  style-preview.html
docs/superpowers/plans/: 2026-05-08-cross-file-search.md  2026-05-08-viewer-bg-and-nav-popup.md
docs/superpowers/specs/: 2026-05-08-cross-file-search-design.md  2026-05-08-viewer-bg-and-nav-popup-design.md
openshow/: __init__.py  app.py  cli.py  constants.py  documents.py  models.py  search.py  terminal.py  text.py  themes.py
tests/: test_documents.py  test_search.py
