[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "showmd"
version = "0.1.0"
description = "A terminal markdown vault viewer with wiki links, live refresh, themes, and graph navigation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "showmd contributors" }
]
classifiers = [
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Editors",
  "Topic :: Utilities",
]

[project.scripts]
showmd = "obsidian_cli:main"

[tool.setuptools]
py-modules = ["obsidian_cli"]
