[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openshow"
version = "0.1.0"
description = "A terminal markdown vault viewer with wiki links, live refresh, themes, and graph navigation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "openshow contributors" }
]
classifiers = [
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Editors",
  "Topic :: Utilities",
]

[project.scripts]
openshow = "openshow.cli:main"

[tool.setuptools]
packages = ["openshow"]
